; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/lists/extr_string_list.c_string_list_find_elem_prefix.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/lists/extr_string_list.c_string_list_find_elem_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @string_list_find_elem_prefix(%struct.string_list* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.string_list*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca [255 x i8], align 16
  store %struct.string_list* %0, %struct.string_list** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.string_list*, %struct.string_list** %5, align 8
  %11 = icmp ne %struct.string_list* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %55

13:                                               ; preds = %3
  %14 = getelementptr inbounds [255 x i8], [255 x i8]* %9, i64 0, i64 0
  store i8 0, i8* %14, align 16
  %15 = getelementptr inbounds [255 x i8], [255 x i8]* %9, i64 0, i64 0
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @strlcpy(i8* %15, i8* %16, i32 255)
  %18 = getelementptr inbounds [255 x i8], [255 x i8]* %9, i64 0, i64 0
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @strlcat(i8* %18, i8* %19, i32 255)
  store i64 0, i64* %8, align 8
  br label %21

21:                                               ; preds = %51, %13
  %22 = load i64, i64* %8, align 8
  %23 = load %struct.string_list*, %struct.string_list** %5, align 8
  %24 = getelementptr inbounds %struct.string_list, %struct.string_list* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ult i64 %22, %25
  br i1 %26, label %27, label %54

27:                                               ; preds = %21
  %28 = load %struct.string_list*, %struct.string_list** %5, align 8
  %29 = getelementptr inbounds %struct.string_list, %struct.string_list* %28, i32 0, i32 1
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = load i64, i64* %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i8*, i8** %7, align 8
  %36 = call i64 @string_is_equal_noncase(i32 %34, i8* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %49, label %38

38:                                               ; preds = %27
  %39 = load %struct.string_list*, %struct.string_list** %5, align 8
  %40 = getelementptr inbounds %struct.string_list, %struct.string_list* %39, i32 0, i32 1
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %40, align 8
  %42 = load i64, i64* %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds [255 x i8], [255 x i8]* %9, i64 0, i64 0
  %47 = call i64 @string_is_equal_noncase(i32 %45, i8* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %38, %27
  store i32 1, i32* %4, align 4
  br label %55

50:                                               ; preds = %38
  br label %51

51:                                               ; preds = %50
  %52 = load i64, i64* %8, align 8
  %53 = add i64 %52, 1
  store i64 %53, i64* %8, align 8
  br label %21

54:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %55

55:                                               ; preds = %54, %49, %12
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @strlcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlcat(i8*, i8*, i32) #1

declare dso_local i64 @string_is_equal_noncase(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
